# once-for-all

./: .gitignore  Dockerfile  eval_specialized_net.py  pyproject.toml  train_ofa_net.py
.devcontainer/: devcontainer.json
ofa/: model_zoo.py
ofa/imagenet_classification/data_providers/: __init__.py  cifar10.py  imagenet.py
ofa/imagenet_classification/elastic_nn/: utils.py
ofa/imagenet_classification/elastic_nn/modules/: dynamic_layers.py  dynamic_op.py
ofa/imagenet_classification/elastic_nn/networks/: ofa_mbv3.py  ofa_proxyless.py  ofa_resnets.py
ofa/imagenet_classification/elastic_nn/training/: progressive_shrinking.py
ofa/imagenet_classification/networks/: __init__.py  mobilenet_v3.py  proxyless_nets.py  resnets.py
ofa/imagenet_classification/run_manager/: distributed_run_manager.py  run_config.py  run_manager.py
ofa/nas/accuracy_predictor/: acc_dataset.py  acc_predictor.py
ofa/nas/efficiency_predictor/: latency_lookup_table.py
ofa/nas/search_algorithm/: evolution.py
ofa/tutorial/: accuracy_predictor.py  evolution_finder.py  flops_table.py  imagenet_eval_helper.py  latency_table.py
ofa/utils/: common_tools.py  flops_counter.py  layers.py  my_modules.py  pytorch_modules.py  pytorch_utils.py
ofa/utils/my_dataloader/: my_data_loader.py  my_data_worker.py  my_distributed_sampler.py  my_random_resize_crop.py
